# omegah_examples_serial

./: .gitignore  CMakeLists.txt  README.md  firstOrderAdjacency.cpp  ghosting.cpp  hypercube.cpp  inversion.cpp  testing.cmake  transition.cpp
meshes/: plate.smd
meshes/cube7k.osh/: 0.osh
meshes/hypercube.osh/: 0.osh
meshes/tri8.osh/: 0.osh
meshes/tri8_4p.osh/: 0.osh  1.osh  2.osh  3.osh
